# SATsolver

./: README.md
bonus/: CMakeLists.txt  constant.h  formulaParser.h  main.cc  satSolver.cc  satSolver.h  treeNode.cc  treeNode.h
pa1/: constant.h  main.cc  parser.cc  tokenizer.cc  tokenizer.h  treeNode.cc
pa2/: CMakeLists.txt  formulaParser.cc  main.cc  satSolver.cc  tokenizer.cc  tokenizer.h  tseitinTransformer.cc
